[package]
name = "receman_sequence"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo.git", rev = "ee33b01487192417a7ab04402b5cb98d86b3d22d", features = ["prover"]}
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", rev = "ee33b01487192417a7ab04402b5cb98d86b3d22d", package = "stwo-constraint-framework", features = ["prover"] }
num-traits = "0.2.17"
itertools = "0.12.0"
rand = "0.8.5"